--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "enzyme": "^3.11.0",
+    "express": "^4.17.2",
     "firebase": "^9.5.0",
     "mongoose": "^6.0.13",
     "react": "^17.0.2",
