--- a/server/package.json
+++ b/server/package.json
@@ -18,8 +18,10 @@
     "cors": "^2.8.5",
     "dotenv": "^14.3.2",
     "express": "^4.17.2",
+    "express-passport-logout": "^0.1.0",
     "express-session": "^1.17.2",
     "jsonwebtoken": "^8.5.1",
+    "jwt-decode": "^3.1.2",
     "mongoose": "^6.0.13",
     "mongoose-findorcreate": "^3.0.0",
     "passport": "^0.5.2",
