--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "@reduxjs/toolkit": "^1.7.0",
     "axios": "^0.24.0",
     "express-session": "^1.17.2",
+    "http-proxy-middleware": "^2.0.2",
     "passport": "^0.5.2",
     "react-redux": "^7.2.6",
     "redux": "^4.1.2",
