--- a/server/package.json
+++ b/server/package.json
@@ -25,6 +25,7 @@
     "mongoose": "^6.0.13",
     "mongoose-findorcreate": "^3.0.0",
     "passport": "^0.5.2",
+    "passport-google-oauth": "^2.0.0",
     "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
