--- a/server/package.json
+++ b/server/package.json
@@ -31,6 +31,7 @@
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^6.1.0",
     "react-scripts": "^5.0.0",
+    "react-social-buttons": "^1.1.1",
     "validation": "^0.0.1"
   },
   "devDependencies": {
