--- a/server/package.json
+++ b/server/package.json
@@ -15,11 +15,13 @@
     "body-parser": "^1.19.0",
     "concurrently": "^6.4.0",
     "connect-mongo": "^4.6.0",
+    "cookie-session": "^2.0.0",
     "cors": "^2.8.5",
     "dotenv": "^14.3.2",
     "express": "^4.17.2",
     "express-passport-logout": "^0.1.0",
     "express-session": "^1.17.2",
+    "googleapis": "^39.2.0",
     "jsonwebtoken": "^8.5.1",
     "jwt-decode": "^3.1.2",
     "mongoose": "^6.0.13",
