--- a/server/package.json
+++ b/server/package.json
@@ -21,6 +21,7 @@
     "express": "^4.17.2",
     "express-passport-logout": "^0.1.0",
     "express-session": "^1.17.2",
+    "google-auth-library": "^7.11.0",
     "googleapis": "^39.2.0",
     "jsonwebtoken": "^8.5.1",
     "jwt-decode": "^3.1.2",
