--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,7 @@
     "body-parser": "^1.19.0",
     "classnames": "^2.3.1",
     "concurrently": "^6.4.0",
+    "connect-flash": "^0.1.1",
     "connect-mongo": "^4.6.0",
     "cookie-session": "^2.0.0",
     "cors": "^2.8.5",
