--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "enzyme": "^3.11.0",
     "express": "^4.17.2",
     "firebase": "^9.5.0",
+    "moment": "^2.29.1",
     "mongoose": "^6.0.13",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
