--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.24.0",
+    "bootstrap-icons": "^1.8.1",
     "enzyme": "^3.11.0",
     "express": "^4.17.2",
     "firebase": "^9.5.0",
